tests/react_functional/__snapshots__/jsfmt.spec.js.snap
exports[`test test.js 1`] = `
"import React from \"react\";

function F(props: { foo: string }) {}
<F />; // error: missing \`foo\`
<F foo={0} />; // error: number ~> string
<F foo=\"\" />; // ok

// props subtyping is property-wise covariant
function G(props: { foo: string|numner }) {}
<G foo=\"\" />; // ok

var Z = 0;
<Z />; // error, expected React component
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* error: missing \`foo\`*/
/* error: number ~> string*/
// ok
// props subtyping is property-wise covariant
// ok
// error, expected React component
import React from \"react\";

function F(props: { foo: string }) {}

<F/>;

<F foo={0}/>;

<F foo=\"\"/>;

function G(props: { foo: string | numner }) {}

<G foo=\"\"/>;

var Z = 0;

<Z/>;
"
`;
